Closed Bug 866804 Opened 12 years ago Closed 12 years ago

Fix sometimes-uninitialized warning in nsGUIEventIPC.h

Categories

(Core :: Widget, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla23

People

(Reporter: reuben, Assigned: reuben)

Details

Attachments

(1 file)

Attached patch Fix warningSplinter Review
I get One Billion instances of this warning when building with Clang trunk, because &keyNameIndex is used uninitialized if the first ReadParam call returns true.
Attachment #743164 - Flags: review?(bugs)
Attachment #743164 - Flags: review?(bugs) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: