Bug 866804 - Fix sometimes-unitialized warning in nsGUIEventIPC.h. r=smaug